# st25r39

./: Cargo.toml  README.md
examples/: Cargo.toml  README.md  memory.x
examples/.cargo/: config.toml
examples/src/: lib.rs
examples/tests/: integration.rs
src/: aat.rs  commands.rs  interface.rs  lib.rs  mifare_classic.rs  nfc_a.rs  registers.rs
src/mifare_classic/: crypto1.rs
