[package]
name = "st25r39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.6"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
bilge = "0.2.0"
fugit = "0.3.7"
heapless = { version = "0.8.0", features = ["defmt-03"] }

[dependencies.bitvec]
version = "1.0.1"
default-features = false

# not sure i even need this
# [workspace]
# resolver = "2"
# members = [ "." ]
# exclude = [ "examples" ]

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
